--- a/argocd/service.yml
+++ b/argocd/service.yml
@@ -1,20 +1,12 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: tomcat-deployment
-  namespace: my-namespace  # Add your desired namespace here
+  name: tomcat-service
+  namespace: my-namespace  # Specify the same namespace
 spec:
   selector:
-    matchLabels:
-      app: tomcat
-  replicas: 3 # tells deployment to run 3 pods matching the template
-  template:
-    metadata:
-      labels:
-        app: tomcat
-    spec:
-      containers:
-      - name: tomcat
-        image: baalneanjali/tomcatsamplecode:1.0
-        ports:
-        - containerPort: 8080
+    app: tomcat
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
